# stat-algs

./: .gitignore  pyproject.toml
exam/: emnist.ipynb
lab2/: LAB-2 External storages.ipynb
lab3/: LAB-3-transformer.ipynb  bert
lab4/: LAB-4 Autoencoders.ipynb
