[tool.poetry]
name = "stat-algs"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.5.1"
torchvision = "^0.20.1"
tensorstore = "^0.1.69"
matplotlib = "^3.9.2"
torchinfo = "^1.8.0"
tqdm = "^4.67.1"
scikit-learn = "^1.5.2"
tensorflow = "^2.18.0"
nltk = "^3.9.1"
keras-hub = "^0.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
